[gd_scene load_steps=3 format=2]

[ext_resource path="res://Fonts/Placeholder.tres" type="DynamicFont" id=1]
[ext_resource path="res://Top Down/scripts/UI.gd" type="Script" id=2]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Vida" type="Label" parent="."]
margin_right = 216.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 1 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contador_de_kill" type="Label" parent="."]
margin_left = 21.3784
margin_top = 54.4604
margin_right = 237.378
margin_bottom = 123.46
custom_fonts/font = ExtResource( 1 )
text = "Kills: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waves" type="Label" parent="."]
margin_left = 437.24
margin_top = 532.257
margin_right = 590.24
margin_bottom = 590.257
custom_fonts/font = ExtResource( 1 )
text = "Wave 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_Wave" type="Timer" parent="."]

[node name="Gun_icon" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.52549 )
margin_left = 19.0
margin_top = 475.0
margin_right = 140.0
margin_bottom = 585.0
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer_Wave" to="." method="_on_Timer_Wave_timeout"]
